[package]
name = "envoy-rate-limit-header"
version = "0.1.0"
authors = ["Lahiru Udayanga <lahirudesilva.17@cse.mrt.ac.lk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.126", features = ["derive"]}
serde_json = "1.0.64"
log = "0.4.14"
serde-humanize-rs = "0.1.1"
proxy-wasm = "0.1.3"
bincode = "1.3.3"
wasm-bindgen = "0.2.74"
serde-aux = "2.2.0"
chrono = "0.4.19"