[package]
name = "metadata-filter"
version = "0.1.0"
authors = ["Lahiru Udayanga <lahirudesilva.17@cse.mrt.ac.lk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
proxy-wasm = "0.1.3"
log = "0.4.14"
wasm-bindgen = "0.2.74"